<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsAndCondition"
    android:background="@color/background_color">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tc_title"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_margin="5dp"

        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/tc_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subTitle"
                />
            <TextView
                android:text="@string/tc_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subBody"
                />
            <TextView
                android:text="@string/tc_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subBody"
                />
            <TextView
                android:text="@string/tc_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subBody"
                />
            <TextView
                android:text="@string/tc_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subBody"
                />
            <TextView
                android:text="@string/tc_text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subTitle"
                />
            <TextView
                android:text="@string/tc_text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subBody"
                />
            <TextView
                android:text="@string/tc_text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subBody"
                />
            <TextView
                android:text="@string/tc_text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subBody"
                />
            <TextView
                android:text="@string/tc_text10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/subBody"
                />

        </LinearLayout>


    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <CheckBox
        android:id="@+id/tc_tick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tc_tick_label"
        android:checked="false"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/tc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tc_button_label"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/white"/>
    </LinearLayout>

</LinearLayout>