<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">




    <item android:title="@string/menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_main"
                    android:icon="@drawable/ic_home"
                    android:title="@string/main" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about" />

                <item
                    android:id="@+id/nav_status"
                    android:icon="@drawable/ic_about"
                    android:title="আজকের দিনে আমার অবস্থা" />
                <item
                    android:id="@+id/nav_registration"
                    android:icon="@drawable/ic_registration"
                    android:title="@string/registration" />
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/login" />

                <item
                    android:id="@+id/nav_path"
                    android:icon="@drawable/ic_addiction"
                    android:title="মাদকাসক্ত মুক্তির কৌশল" />
                <item
                    android:id="@+id/nav_archive"
                    android:icon="@drawable/ic_archive"
                    android:title="আলোর মিছিল আর্কাইভ" />
                <item
                    android:id="@+id/nav_expert_opinion"
                    android:icon="@drawable/expert"
                    android:title="@string/expert_opinion" />
                <item
                    android:id="@+id/nav_forum"
                    android:icon="@drawable/ic_forum"
                    android:title="আলোর মিছিল ফোরাম" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </group>

        </menu>
    </item>

</menu>