<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameFieldTitle"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/phone_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneFieldTitle"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/phone_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordFieldTitle"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singupLabel"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tc_tick_label"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</RelativeLayout>