<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameFieldTitle"
            android:textStyle="bold"
            />
    <EditText
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordFieldTitle"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginButtonLabel"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</RelativeLayout>