<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/item_root"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/color_white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            >
            <TextView
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/title1"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/section_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:text="( মাদক  ও  মাদকাসক্তি  বিষয়ে তথ্য)"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/editLabel"
                    android:layout_margin="10sp"/>
                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deleteLabel"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="10dp"/>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>