<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@android:color/white">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/newCommentContainer"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/activity_post_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="@dimen/intrinsic_padding"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                android:text="title"
                android:textAppearance="@style/TextAppearance.Title" />

            <LinearLayout
                android:id="@+id/authorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/titleTextView"
                android:layout_marginBottom="@dimen/intrinsic_padding"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding">

                <TextView
                    android:id="@+id/authorLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/intrinsic_padding"
                    android:text="@string/posted_by_label"
                    android:textAppearance="@style/TextAppearance.Second.Light" />

                <TextView
                    android:id="@+id/authorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Highlight" />

            </LinearLayout>


            <TextView
                android:id="@+id/descriptionEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authorContainer"
                android:layout_marginBottom="@dimen/large_intrinsic_padding"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                android:text="cvcvcvcvcvcv"
                android:autoLink="all"
                android:textAppearance="@style/TextAppearance.Second" />

            <TextView
                android:id="@+id/commentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionEditText"
                android:layout_marginBottom="@dimen/intrinsic_padding"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                android:text="@string/commentTitle"
                android:textColor="@color/primary_dark_text"
                android:visibility="visible" />

            <RelativeLayout
                android:id="@+id/commentsParentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/commentsLabel"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/commentsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible"
                    tools:listitem="@layout/comment_list_item" />

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@+id/newCommentContainer"
        android:background="@drawable/top_shadow" />

    <LinearLayout
        android:id="@+id/newCommentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/comment_text_hint"
            android:inputType="textMultiLine"
            android:maxHeight="@dimen/new_comment_max_height"
            android:minHeight="@dimen/new_comment_min_height"
            android:padding="@dimen/intrinsic_padding" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/intrinsic_padding"
            android:background="@drawable/send_comment_button_bg"
            android:enabled="false"
            android:minWidth="0dp"
            android:paddingLeft="@dimen/large_intrinsic_padding"
            android:paddingRight="@dimen/large_intrinsic_padding"
            android:text="@string/send_comment_button_label"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>




